# SPEL_OpenACC

./: .gitignore  README.md  pyproject.toml  schema.puml  setup.py
SourceFiles/: AerosolMod.F90  AllocationMod.F90  BalanceCheckMod.F90  BandDiagonalMod.F90  CH4Mod.F90  CanopyFluxesMod.F90  CanopyTemperatureMod.F90  CarbonStateUpdate1Mod.F90  ColumnDataType.F90  ColumnWorkRoutinesMod.F90  CropType.F90  DecompCascadeCNMod.F90  EcosystemBalanceCheckMod.F90  EcosystemDynMod.F90  FrictionVelocityMod.F90  GridcellDataType.F90  GridcellType.F90  HydrologyDrainageMod.F90  HydrologyNoDrainageMod.F90  LakeHydrologyMod.F90  LakeTemperatureMod.F90  LandunitDataType.F90  MaintenanceRespMod.F90  NitrifDenitrifMod.F90  NitrogenDynamicsMod.F90  NitrogenStateUpdate1Mod.F90  PhosphorusDynamicsMod.F90  PhosphorusStateUpdate1Mod.F90  PhotosynthesisMod.F90  PrecisionControlMod.F90  SnowHydrologyMod.F90  SnowSnicarMod.F90  SoilFluxesMod.F90  SoilHydrologyMod.F90  SoilLittVertTranspMod.F90  SoilMoistStressMod.F90  SoilTemperatureMod.F90  SoilWaterMovementMod.F90  SurfaceAlbedoMod.F90  SurfaceRadiationMod.F90  (+37 more)
SourceFiles/tests/: 2  CMakeLists.txt  H5InterfaceMod.F90  Makefile  TestH5.F90  Test_NCF.F90  cmake_build.sh  hdf5_wrapper.c  nc_io.F90  test.nc
scripts/: DerivedType.py  LakeTemperatureMod.OPT.F90  LoopConstructs.py  UnitTestforELM.py  aggregate.py  analyze_subroutines.py  check_sections.py  cli.py  duplicateMod.F90  dynamic_globals.py  edit_files.py  errorAnalysis.py  export.ipynb  export_objects.py  fortran_modules.py  fortran_parsing.py  get_types.py  git_commit.sh  gitutils.py  (+27 more)
(+112 files in other folders)
