[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "spel"
version = "0.5"
dependencies = [
	"pandas>=2.2.2",
	"pytest>=8.3.4",
	"pytest-subtests>=0.14.1",
	"numpy>=1.26",
	"Django>=5.1.2",
	"h5py>=3.12.1",
	"scipy>=1.14.1",
	"tabulate>=0.9.0",
	"xarray>=2024.7",
	"netCDF4>=1.7.2",
]

[tool.setuptools.packages.find]
include = ["scripts"]

[project.scripts]
spel = "scripts.cli:main"
